# library

./: .env.example  .gitignore  README.md  compose.yaml
api/: Dockerfile  pyproject.toml
api/app/: main.py  seed.py
auth/: Dockerfile  auth.ts  email.ts  package-lock.json  package.json  tsconfig.json
auth/src/: index.ts
docs/: skills.md
postgres/: init.sql
scripts/: e2e-check.sh  generate-social-preview.mjs
scripts/ui-e2e/: package-lock.json  package.json  playwright.config.js  walkthrough.spec.js
web/: Dockerfile  package-lock.json  package.json
web/src/app/: error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
web/src/app/api/dev/reset-password-link/: route.ts
web/src/app/api/dev/verification-link/: route.ts
web/src/app/forgot-password/: layout.tsx  page.tsx
web/src/app/login/: layout.tsx  page.tsx
web/src/app/reset-password/: layout.tsx  page.tsx
web/src/app/reset-password/pending/: layout.tsx  page.tsx
web/src/app/signup/: layout.tsx  page.tsx
web/src/app/verify/: layout.tsx  page.tsx
web/src/app/verify/pending/: layout.tsx  page.tsx
web/src/components/: app-shell.tsx  auth-card.tsx  auth-provider.tsx  mailpit-instructions.tsx  page-background.tsx  theme-provider.tsx  theme-toggle.tsx  ui.tsx
web/src/lib/: api.ts  auth-client.ts  mailpit.ts  metadata.ts  use-dev-mail-link.ts
