[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "library-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "minio>=7.2",
  "psycopg[binary]>=3.2",
  "PyJWT[crypto]>=2.10",
  "redis>=5.2",
  "uvicorn[standard]>=0.34",
]

[tool.setuptools]
packages = ["app"]
